--- a/static/css/dynamic-keyboard.css
+++ b/static/css/dynamic-keyboard.css
@@ -25,7 +25,7 @@ header div.control-board{
 
 header div.control-buttons{
     display: grid;
-    grid-template-columns: auto repeat(2, 20px);
+    grid-template-columns: auto repeat(3, 20px);
     gap: 12px;
     color: #706c7b;
 }
@@ -77,7 +77,7 @@ main{
 main section.keyboard-section{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 12px;
     padding: 0 6px;
 }
@@ -90,6 +90,8 @@ main section.keyboard-section button{
     color: #4f5459;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
+    max-width: 81px;
+    max-height: 71px;
 }
 
 main section.keyboard-section button i{
@@ -99,7 +101,6 @@ main section.keyboard-section button i{
     top: 4px;
 }
 
-/* Add new button */
 #add-new-button{
     border: 1px solid #eee;
     margin-top: 20px;
@@ -143,6 +144,9 @@ main section.keyboard-section button i{
     box-shadow: inset 0px 1px 8px #eee;
     outline: none;
     background: transparent;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
 }
 
 .form-input select {
@@ -182,9 +186,36 @@ main section.keyboard-section button i{
     font-weight: 500;
 }
 
-/* toastify */
 .toastify {
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+#dropForDelete{
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    background-color: rgb(225, 0, 0, .1);
+    padding: 20px;
+    left: 0;
+    width: 100%;
+    display: none;
+    gap: 6px;
+}
+
+#dropForDelete i {
+    font-size: 24px;
+    color: rgb(255, 50, 50);
+    pointer-events: none;
+}
+
+#dropForDelete p {
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    position: relative;
+    top: 2px;
+    pointer-events: none;
 }
