--- a/static/css/dynamic-keyboard.css
+++ b/static/css/dynamic-keyboard.css
@@ -77,7 +77,7 @@ main{
 main section.keyboard-section{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
     gap: 12px;
     padding: 0 6px;
 }
@@ -162,6 +162,14 @@ main section.keyboard-section button i{
     margin-bottom: 4px;
 }
 
+#add-new-button label{
+    font-size: 12px;
+    position: relative;
+    top: 4px;
+    margin-left: 2px;
+    color: #ff0606;
+}
+
 .form-input p{
     font-size: 14px;
     color: #666;
@@ -174,7 +182,7 @@ main section.keyboard-section button i{
     color: #81bc04;
 }
 
-.form-input button{
+.form-input button[type='submit']{
     margin-top: 24px;
     background: #9ae103;
     color: #1d1d23;
@@ -184,6 +192,19 @@ main section.keyboard-section button i{
     padding: 8px 20px;
     border-radius: 4px;
     font-weight: 500;
+}
+
+.form-input button[type='reset']{
+    border: none;
+    background: transparent;
+    position: relative;
+    top: 8px;
+    margin-left: 8px;
+}
+
+.form-input button i {
+    font-size: 28px;
+    color: #4f5459;
 }
 
 .toastify {
